test/ddc-spec/error/01-ErrorExp/20-RecRebound/Test.ds

module Test where

f
 = rec  x = 5
        y = 6
        x = 7
   in   x

